# humanizer

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  test_jsonrpc_e2e.py
article/: humanization-pipeline-upgrade.md  pipeline-improvement-plan.md  research-literature-review.md  round3-strategy.md
docs/: SDD.md
roadmap/: TODO.md
src/humanizer_mcp/: __init__.py  metrics.py  server.py
src/humanizer_mcp/data/: word_frequencies.json
tests/: conftest.py  test_metrics.py  test_pipeline_v2.py  test_server.py
